--- a/main.CSS
+++ b/main.CSS
@@ -3,7 +3,7 @@
     margin: auto;
     height: 40vw;
     width: 40vw; 
-    background: url(./ef.jpeg) no-repeat;
+    background: url(./clock.png) no-repeat;
     background-size: 100%;
 }
 
