--- a/main.CSS
+++ b/main.CSS
@@ -3,7 +3,7 @@
     margin: auto;
     height: 40vw;
     width: 40vw; 
-    background: url(./clock.png) no-repeat;
+    background: url(https://github.com/vishalpatil0/clock-using-HTML-and-JS-and-CSS/blob/main/clock.png) no-repeat;
     background-size: 100%;
 }
 
